<resources>
    <string name="app_name">Happy</string>
    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>
    <string name="header_profile_name">Vicente Oliveira</string>
    <string name="header_profile_email">email@google.com.br</string>
    <string name="profile_picture">profilePicture</string>
    <string name="toolbar_title">Titulo</string>
    <string name="menu_home">Início</string>
    <string name="menu_my_rep">Minha República</string>
    <string name="menu_ads">Classificados</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_sign_out">Sair</string>
    <string name="shopping_my_rep_activity">Compras</string>
    <string name="meetings_my_rep_activity">Reuniões</string>
    <string name="members_my_rep_activity">Membros</string>
    <string name="cleaning_my_rep_activity">Limpeza</string>
    <string name="bills_my_rep_activity">Contas</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="ad_picture_ads_activity">Foto Classificados</string>
    <string name="text_help_activity">Por favor se tiver algum problema, entre em contato com a gente! \n Pelo telefone: (19) 98325-5521 \n E-mail: dovalleraissa@gmail.com</string>
    <string name="user_profile_full_name">Nome Completo</string>
    <string name="user_profile_save">Salvar</string>
    <string name="user_profile_hometown">Cidade Natal</string>
    <string name="user_profile_college">Faculdade</string>
    <string name="user_profile_graduate">Graduação</string>
    <string name="user_profile_toolbar_title">Perfil</string>
    <string name="bills_toolbar_title">Contas</string>
    <string name="add_bill_desc_title">Descrição</string>
    <string name="add_bill_price_title">Preço</string>
    <string name="add_bill_save_buttom">Salvar</string>
    <string name="add_bill_app_bar_title_new">Nova Conta</string>
    <string name="add_bill_app_bar_title_edit">Editar Conta</string>
    <string name="members_toolbar_title">Membros</string>
    <string name="add_member_email_title">E-mail</string>
    <string name="btn_sent_invite_member">Enviar Convite</string>
    <string name="add_member_app_bar_title">Convidar Membro</string>
    <string name="add_cleaning_room_app_bar_title_new">Adicionar Cômodo</string>
    <string name="add_cleaning_room_app_bar_title_edit">Editar Cômodo</string>
    <string name="add_cleaning_room_desc_title">Descrição</string>
    <string name="add_cleaning_room_frequency_title">Frequência em dias</string>
    <string name="btn_save_cleaning_room">Salvar</string>
    <string name="cleaning_toolbar_title">Quadro de Limpeza</string>
    <string name="meetings_toolbar_title">Reuniões</string>
    <string name="shopping_toolbar_title">Compras</string>
    <string name="add_meeting_subject_title">Assunto</string>
    <string name="btn_save_meeting">Salvar</string>
    <string name="add_meeting_forwarding_title">Encaminhamentos</string>
    <string name="add_meeting_verdict_title">Decisão</string>
    <string name="add_meeting_debate_title">Discussão</string>
    <string name="add_shopping_item_desc_title">Descrição</string>
    <string name="btn_add_shopping_item">Salvar</string>
    <string name="add_meeting_app_bar_title_new">Nova Reunião</string>
    <string name="add_meeting_app_bar_title_edit">Editar Reunião</string>
    <string name="add_shopping_item_app_bar_title">Adicionar Compra</string>
    <string name="settings_toolbar_title">Configurações</string>
    <string name="login_message">E-mail ou senha inválidos</string>
    <string name="user_profile_celPhone">Celular</string>
    <string name="bills_close_month_toolbar_title">Fechamento</string>
    <string name="total_rep_title">Total:</string>
    <string name="total_member_title">Dividido entre os Membros:</string>
    <string name="close_month_save_button">Pagar</string>
    <string name="my_rep_toolbar_title">Perfil da República</string>
    <string name="rep_profile_name">Nome da República</string>
    <string name="rep_profile_address">Endereço da República</string>
    <string name="rep_profile_toolbar_title">Perfil da República</string>
    <string name="member_remove">Remover Membro</string>
    <string name="buy_meeting_app_bar_title_edit">Comprar</string>
    <string name="btn_buy_shopping_item">Comprar</string>
    <string name="add_shopping_item_price_title">Preço</string>
    <string name="user_profile_secret_answer">Resposta Secreta</string>
    <string name="receive_secret_question">Receber pergunta secreta</string>
    <string name="email_forgot_password">E-mail</string>
    <string name="text_forgot_password">Para resetar sua senha por favor digite seu e-mail e reponda sua pergunta secreta</string>
    <string name="answer_secret_question_button">Responder</string>
    <string name="input_secret_answer">Resposta Secreta</string>
    <string name="btn_reset_password_title">Resetar senha</string>
    <string name="btn_clean_cleaning_room">Limpar Cômodo</string>

    <string-array name="states">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>
    <string-array name="secretQuestions">
        <item>Selecione uma pergunta secreta</item>
        <item>Qual sua cor favorita?</item>
        <item>Qual o nome do seu animal de estimação?</item>
        <item>Qual a sua comida favorita?</item>
        <item>Qual o seu filme preferido?</item>
        <item>Qual a sua música favorita?</item>
        <item>Qual o nome do seu ator/atriz favorito?</item>
        <item>Qual o nome do seu livro favorito?</item>
        <item>Qual a sua cidade favorita?</item>
        <item>Qual o nome da sua primeira namorada?</item>
        <item>Qual o nome do seu primeiro namorado?</item>
    </string-array>
</resources>