<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/primary_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_rep"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_my_rep" />
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_baseline_announcement_24"
            android:title="@string/menu_ads" />
    </group>

    <group android:id="@+id/secondary_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/menu_sign_out" />
    </group>

</menu>