<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:padding="16dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/header_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/header_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_profile_name"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:paddingTop="8dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_profile_email" />

</LinearLayout>